--- a/clase2/07-paleta/index.html
+++ b/clase2/07-paleta/index.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Mis paletas</title>
-  <!-- Tipografía desde Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mis paletas</title>
+
+    <!-- Fuente de Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
+   
+    <!-- Enlace al CSS -->
+    <link rel="stylesheet" href="./style/style.css">
+    
+</head>
+
+<body>
+    <h1>Mis paletas</h1>
+
+    <p>Paleta 1</p>
+    <div class="paleta-1">
+        <div class="color color-1"></div>
+        <div class="color color-2"></div>
+        <div class="color color-3"></div>
+        <div class="color color-4"></div>
+    </div>
+
+    <p>Paleta 2</p>
+    <div class="paleta-2">
+        <div class="color color-5"></div>
+        <div class="color color-6"></div>
+        <div class="color color-7"></div>
+        <div class="color color-8"></div>
+    </div>
+
+    <p>Paleta 3</p>
+    <div class="paleta-3">
+        <div class="color color-9"></div>
+        <div class="color color-10"></div>
+        <div class="color color-11"></div>
+        <div class="color color-12"></div>
+    </div>
+
+    <p>Paleta 4</p>
+    <div class="paleta-4">
+        <div class="color color-13"></div>
+        <div class="color color-14"></div>
+        <div class="color color-15"></div>
+        <div class="color color-16"></div>
+    </div>
+</body>
+</html>
 
 
-  <style>
-    body {
-      font-family: 'Rubik', sans-serif;
-      background-color: #f0f0f0;
-      padding: 40px;
-    }
 
-    h1 {
-      font-size: 48px;
-      margin-bottom: 30px;
-    }
-
-    h2 {
-      font-size: 32px;
-      margin-top: 40px;
-      margin-bottom: 15px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 0 20px 0;
-    }
-
-    li {
-      padding: 12px;
-      margin-bottom: 8px;
-      font-size: 20px;
-      border-radius: 6px;
-    }
-
-    /* Paleta Hexadecimal */
-    .hex-1 { background-color: #FFFFFF; color: #000000; }
-    .hex-2 { background-color: #000000; color: #FFFFFF; }
-    .hex-3 { background-color: #FF5733; color: #FFFFFF; }
-    .hex-4 { background-color: #3498DB; color: #FFFFFF; }
-    .hex-5 { background-color: #F1C40F; color: #000000; }
-
-    /* Paleta RGB */
-    .rgb-1 { background-color: rgb(255, 255, 255); color: #000000; }
-    .rgb-2 { background-color: rgb(44, 62, 80); color: #FFFFFF; }
-    .rgb-3 { background-color: rgb(231, 76, 60); color: #FFFFFF; }
+    
