--- a/clase7/01-layout/layout1.html
+++ b/clase7/01-layout/layout1.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layout 1</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/1layout.css">
 </head>
 <body>
-  <header>Header</header>
-  <main>Main Content</main>
-  <footer>Footer</footer>
+  <header>HEADER</header>
+  <main>CONTENIDO PRINCIPAL</main>
+  <footer>FOOTER</footer>
 </body>
 </html>
