--- a/clase7/01-layout/layout2.html
+++ b/clase7/01-layout/layout2.html
@@ -2,13 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layout 2</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/2layout.css">
 </head>
 <body>
-  <header>Header</header>
-  <nav>Navigation Bar</nav>
-  <main>Main Content</main>
-  <footer>Footer</footer>
+  <header>HEADER</header>
+  <main>
+    <nav>SIDEBAR IZQUIERDA</nav>
+    <section>CONTENIDO</section>
+    <aside>SIDEBAR DERECHA</aside>
+  </main>
+  <footer>FOOTER</footer>
 </body>
 </html>
