--- a/clase7/01-layout/layout3.html
+++ b/clase7/01-layout/layout3.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Layout 3</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <!-- Asegúrate de que el archivo se llame exactamente layout3.css y esté en la misma carpeta -->
+  <link rel="stylesheet" href="./style/3layout.css" />
 </head>
 <body>
-  <header>Header</header>
+  <header>HEADER</header>
   <main>
-    <aside>Left Panel</aside>
-    <div style="flex:1;">Main Content</div>
+    <nav>MENÚ</nav>
+    <article>ARTÍCULO PRINCIPAL</article>
   </main>
-  <footer>Footer</footer>
+  <footer>FOOTER</footer>
 </body>
 </html>
